--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerOwnedStates.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Shop.h" />
     <ClInclude Include="SkillObject.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
@@ -177,6 +178,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerOwnedStates.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="SkillObject.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
