파피루스 상태에 따라 적당한 그림 그리기 그 외 개
1. 공격 패턴에 쓰일 뼈 추가
2. 패턴 메세지 송수신 및 오브젝트 위치에 따라 그리기
3. 다 쓴 뼈 오브젝트 삭제하는 메세지 송수신
4. 클라와 서버 무력화 시간 맞게 스프라이트 출력하게 매우 '노력'함 그리고 성공함

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="Common.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="MsgInstence.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Monster.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
@@ -72,8 +69,14 @@
     <ClCompile Include="..\MemStream\MemoryWriteStream.cpp">
       <Filter>2019180016\Stream</Filter>
     </ClCompile>
-    <ClCompile Include="MemoryStream.cpp">
-      <Filter>2019180016\Stream</Filter>
+    <ClCompile Include="..\MemStream\MemoryStream.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Random.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Bone.cpp">
+      <Filter>2019180016\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -84,9 +87,6 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="StateMessage.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="MsgInstence.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Monster.h">
@@ -124,6 +124,12 @@
     </ClInclude>
     <ClInclude Include="MemoryStream.h">
       <Filter>2019180016\Stream</Filter>
+    </ClInclude>
+    <ClInclude Include="Random.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Bone.h">
+      <Filter>2019180016\Header</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
