--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="..\MemStream\MemoryStream.cpp" />
     <ClCompile Include="..\MemStream\MemoryWriteStream.cpp" />
     <ClCompile Include="Bat.cpp" />
+    <ClCompile Include="Bone.cpp" />
     <ClCompile Include="Castle.cpp" />
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="CommonMonster.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="..\MemStream\MemoryReadStream.h" />
     <ClInclude Include="..\MemStream\MemoryWriteStream.h" />
     <ClInclude Include="Bat.h" />
+    <ClInclude Include="Bone.h" />
     <ClInclude Include="Castle.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="CommonMonster.h" />
